css/style.css
/* ... */
#cover {
  position: absolute;
  background: transparent url(../img/cover_large.png) repeat top left;
  z-index: 100;
  -webkit-transition: -webkit-transform 1000ms ease-in-out; 
     -moz-transition: -moz-transform 1000ms ease-in-out; 
      -ms-transition: -ms-transform 1000ms ease-in-out; 
       -o-transition: -o-transform 1000ms ease-in-out; 
          transition: transform 1000ms ease-in-out; /* custom */

  -webkit-transform-origin: center 0;
  -moz-transform-origin: center 0;
  -ms-transform-origin: center 0;
  -o-transform-origin: center 0;
  transform-origin: center 0;

  background-size: 100% 100%;
  -webkit-background-size: 100% 100%;
  -moz-background-size: 100% 100%;
  -o-background-size: 100% 100%;

  -webkit-transform: translateZ(150px) translateY(10px) scale(0.97);
  -moz-transform: translateZ(150px) translateY(10px) scale(0.97);
  -ms-transform: translateZ(150px) translateY(10px) scale(0.97);
  -o-transform: translateZ(150px) translateY(10px) scale(0.97);
  transform: translateZ(150px) translateY(10px) scale(0.97);
}

#cover.small {
  background: transparent url(../img/cover.png) repeat top left!important;
}

#cover.opened {
  -webkit-transform: rotate3d(1, 0, 0, 110deg);
  -moz-transform: rotate3d(1, 0, 0, 110deg);
  -ms-transform: rotate3d(1, 0, 0, 110deg);
  -o-transform: rotate3d(1, 0, 0, 110deg);
  transform: rotate3d(1, 0, 0, 110deg);
}

.logo {
  background: transparent url(../img/logo.png) no-repeat top left;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  width: 136px;
  height: 28px;
  position: absolute;
  bottom: 40px;
  right: 40px;
  display: none;
}
.logo.white {
  background-image:url(../img/logo_white.png);
}

#container #cover .logo {
  bottom: 20px;
  right: 20px;
  display: block;
}

#instructions {
  width: 50px;
  height: 50px;
  text-align: center;
  font-family: HelveticaNeue, Arial, sans-serif;
  color: #C0BEB7;
  text-shadow:  0 1px 1px rgba(255, 255, 255, 1);
  font-size: 1.1em;
  position: absolute;
  z-index: 60;
  background: transparent url(../img/pictophone.png) no-repeat top left;
  
  background-size: 100% 100%;
  -webkit-background-size: 100% 100%;
  -moz-background-size: 100% 100%;
  -o-background-size: 100% 100%;

  display: none;

  -webkit-transition: -webkit-transform 1200ms ease-in-out; 
     -moz-transition: -moz-transform 1200ms ease-in-out; 
      -ms-transition: -ms-transform 1200ms ease-in-out; 
       -o-transition: -o-transform 1200ms ease-in-out; 
          transition: transform 1200ms ease-in-out; /* custom */
}

#instructions.toLeft {
  -o-transform: translateX(-200px);
  -ms-transform: translateX(-200px);
  -moz-transform: translateX(-200px);
  -webkit-transform: translateX(-200px);
  transform: translateX(-200px);
}
#instructions.toRight {
  -o-transform: translateX(200px);
  -ms-transform: translateX(200px);
  -moz-transform: translateX(200px);
  -webkit-transform: translateX(200px);
  transform: translateX(200px);
}

#content, #contentcopy {
  width: 580px;
  height: 580px;
  position: absolute;
  z-index: 0;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -moz-user-select: none;
  -moz-user-drag: none;
  user-select: none;

  display: none;
}

#content {
  top: 40px;
  left: 40px;
  z-index: 20;
}

#contentcopy {
  z-index: 60;
}

#content.big,
#contentcopy.big {
  background-image: url(../img/message_big.png);
  background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
}

#overlay {
  width: 580px; 
  height: 580px; 
  position: absolute;
  z-index: 10;
  display: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -moz-user-select: none;
  -moz-user-drag: none;
  user-select: none;
  left: 40px;
  top: 40px;
}

.overlay-triangle {
  float: left;
  position: relative;
  border-top: 0;
  border-right: 0;
  width: 0;
  height: 0;
  border-bottom: 20px solid transparent; 
  border-left: 20px solid #FFF;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -moz-user-select: none;
  -moz-user-drag: none;
  user-select: none;
}

.overlay-triangle.odd {
  border-bottom: 0;
  border-left: 0;
  border-top: 20px solid transparent; 
  border-right: 20px solid #FFF;
  margin-left: -20px;
}

#fake-canvas {
  width: 660px;
  height: 660px;
  background: transparent url(../img/paper_pattern.png) repeat top left;
  position: absolute;
  z-index: 5;
}

#fake-background {
  position: absolute;
  left: 40px;
  right: 40px;
  top: 40px;
  bottom: 40px;
  background: transparent url(../img/background.png) repeat top left;
  z-index: 2;
}


#fake-content {
  position: absolute;
  left: 40px;
  right: 40px;
  top: 40px;
  bottom: 40px;
  z-index: 3;
  display: none;
}

#intro {
  position: absolute;
  width: 700px;
  z-index: 20;
  -o-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  left: 50%;
  top: 50%;
}

.intro-triangle {
  display: block;
  width: 0;
  height: 0;
  position: absolute;

  border-bottom: 20px solid transparent;
  border-left: 20px solid #FFF;

  display: none;

  -o-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
}

.please-wait {
  position: absolute;
  width: 300px;
  height: 100px;
  left: 50%;
  top: 50%;
  margin-left: -150px;
  margin-top: -50px;
  display: block;
  z-index: 1;
  font-size: 20px;
  font-family: HelveticaNeue, Arial, sans-serif;
  text-transform: uppercase;
  text-align: center;
  font-weight: bold;
  color: #322927;
  text-shadow: 0 1px 1px #FFF;
}

/*
* I'm tired of these motherfuckin' triangles on this motherfuckin' plane
*/

#it1 {
  top: 160px;
  left: 0;

  border-bottom: 0;
  border-right: 20px solid #FFF;
  border-top: 20px solid transparent;
  border-left: 0;
}
/* ... */

